<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps!</string>

    <string name="button1">Popular Movies</string>
    <string name="button2">Stock Hawk</string>
    <string name="button3">Build it Bigger</string>
    <string name="button4">Make Your App Material</string>
    <string name="button5">Go Ubiquitous</string>
    <string name="button6">Capstone</string>
</resources>
